--- a/botconfig/config.json
+++ b/botconfig/config.json
@@ -1,4 +1,4 @@
 {
-  "token": "TOKEN",
-  "prefix": "!"
+  "token": "NjkzMTUyNjE5OTkyMTg2OTgw.Xn46rg.IFZkgNtakHo_d0jHTaYG1D418A4",
+  "prefix": "m!"
 }
