--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "discord.js": "^12.5.3",
     "discord.js-12": "^1.0.2",
     "discord.js-minesweeper": "^1.1.0",
+    "minesweeper": "^1.0.5",
     "mojang-api": "0.0.2",
     "moment": "^2.29.1",
     "node-notifier": "^10.0.0",
